--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+management.endpoints.access.default=none
+management.endpoints.web.exposure.include=health,metrics,prometheus
+management.endpoint.health.access=read_only
+management.endpoint.health.show-details=always
+management.endpoint.metrics.access=read_only
+management.endpoint.prometheus.access=read_only
